# Face-Finder

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt  run.py  test.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  099e8cd3d3b0_add_completed_to_photo_status_enum.py  4d16eae1da37_init.py  569b97dce6de_created_upload_tables.py  57f0f469091b_add_on_delete_cascade_to_upload_parts.py  67702c664b0e_temperory_photo_tables.py  77609445329e_add_vector_id_to_user_selfies.py  978bfabcbb09_user_table_changes.py  a3f1c8e92d01_add_password_to_events.py  b5e2d9f14c03_add_cover_image_url_to_events.py  f3b01e62fcee_add_ondelete_cascade_for_event_.py  ff28cad1ab5c_user_model.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/admin/: events.py  organizers.py  photo.py  stats.py  users.py
backend/app/api/auth/: auth.py  oauth.py  profile.py
backend/app/api/callback_routes/: callback_routes.py
backend/app/api/event_routes/: events_routes.py
backend/app/api/photo_retrieval/: __init__.py  photo_retrieval_routes.py
backend/app/api/photo_routes/: photo_routes.py
backend/app/db/: database.py
backend/app/models/: __init__.py  event.py  photo.py  upload.py  upload_part.py  user.py  user_selfie.py
backend/app/schemas/: callback_schemas.py  event_schemas.py  user.py  user_schemas.py
backend/app/services/: oauth_service.py  producer.py  r2_cleanup.py  security.py  selfie_service.py  storage_service.py
backend/dependencies/: db_dependency.py  get_admin_dependency.py  get_user_dependency.py  role_dependency.py
(+60 files in other folders)
