[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.0",
    "boto3>=1.42.89",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pgvector>=0.4.2",
    "pika>=1.3.2",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "uvicorn>=0.43.0",
]
